--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "../server/storage:/app/server/storage"
       - "../collector/hotdir/:/app/collector/hotdir"
       - "../collector/outputs/:/app/collector/outputs"
+      - "../customs/:/app/server/storage"
     user: "${UID:-1000}:${GID:-1000}"
     ports:
       - "3001:3001"
