Before Chrome extension

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -134,12 +134,21 @@ FROM build AS backend-build
 COPY ./server /app/server/
 WORKDIR /app/server
 RUN yarn install --production --network-timeout 100000 && yarn cache clean
+# Switch to root user to install dependencies
+USER root
+
+# Install the transformers.js (JavaScript wrapper for Hugging Face Transformers)
+RUN yarn add @xenova/transformers
+
+# Switch back to anythingllm user after installation
+USER anythingllm
+
 WORKDIR /app
 
 # Install collector dependencies
 COPY ./collector/ ./collector/
 WORKDIR /app/collector
-ENV PUPPETEER_DOWNLOAD_BASE_URL=https://storage.googleapis.com/chrome-for-testing-public 
+ENV PUPPETEER_DOWNLOAD_BASE_URL=https://storage.googleapis.com/chrome-for-testing-public
 RUN yarn install --production --network-timeout 100000 && yarn cache clean
 
 # Compile Llama.cpp bindings for node-llama-cpp for this operating system.
